--- a/src/main/resources/static/bg-chamado-color.css
+++ b/src/main/resources/static/bg-chamado-color.css
@@ -4,3 +4,11 @@ body{
 .background-chamado {
     background-color: #F5F5F5; /* Substitua pelo código da cor desejada */
 }
+
+.editing-active {
+  border: 1px solid #88898a;
+  padding: 4px;
+  background-color: #f0f8ff;
+  border-radius: 4px;
+  outline: none;
+}
