Arrumando vizualização de edição

--- a/src/main/resources/static/bg-chamado-color.css
+++ b/src/main/resources/static/bg-chamado-color.css
@@ -6,9 +6,10 @@ body{
 }
 
 .editing-active {
-  border: 1px solid #88898a;
+  border: 1px solid #97999b;
+  background-color: #d3d3d3;
   padding: 4px;
-  background-color: #f0f8ff;
   border-radius: 4px;
-  outline: none;
+  transition: all 0.3s ease;
 }
+
